--- a/src/server/views/index.pug
+++ b/src/server/views/index.pug
@@ -3,7 +3,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Quicksand&display=swap")
-    link(rel="stylesheet", href="./assets/style.css")
+    link(rel="stylesheet", href="//" + locals.host + "/assets/style.css")
     title Bingo
     body
       div(class="bingo-wrapper")
