--- a/src/server/assets/style.css
+++ b/src/server/assets/style.css
@@ -4,7 +4,7 @@
   margin-bottom: 12px;
 }
 
-h3, p {
+h3, p, li {
   font-family: 'Quicksand', sans-serif;
 }
 
@@ -46,4 +46,27 @@ h3 {
 
 html {
   background-color: #eaeaea;
+}
+
+.t-meta {
+  font-size: 0.8em;
+}
+
+.hidden {
+  display: none;
+}
+
+ul {
+  padding: 0 8;
+}
+
+li {
+  list-style: none;
+  margin-bottom: 8px;
+}
+
+#users #user-info {
+  display: inline-block;
+  width: 33%;
+  text-align: center;
 }
